--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
+
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<VersionPrefix>0.2.0</VersionPrefix>
+		<TargetFramework>net9.0</TargetFramework>		
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 </Project>
