--- a/src/Mcp.ImageOptimizer.Stdio/Mcp.ImageOptimizer.Stdio.csproj
+++ b/src/Mcp.ImageOptimizer.Stdio/Mcp.ImageOptimizer.Stdio.csproj
@@ -2,14 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
-    <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting"/>
+    <PackageReference Include="ModelContextProtocol"/>
   </ItemGroup>
 
   <ItemGroup>
