--- a/src/Mcp.ImageOptimizer.Tools/Mcp.ImageOptimizer.Tools.csproj
+++ b/src/Mcp.ImageOptimizer.Tools/Mcp.ImageOptimizer.Tools.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.4" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
+    <PackageReference Include="ModelContextProtocol" />
+    <PackageReference Include="Microsoft.Extensions.Hosting"/>
+    <PackageReference Include="SixLabors.ImageSharp"/>
+    <PackageReference Include="SixLabors.ImageSharp.Drawing"/>
   </ItemGroup>
 
   <ItemGroup>
