Removed unused projects.

--- a/tests/Mcp.ImageOptimizer.Tools.Tests/Mcp.ImageOptimizer.Tools.Tests.csproj
+++ b/tests/Mcp.ImageOptimizer.Tools.Tests/Mcp.ImageOptimizer.Tools.Tests.csproj
@@ -28,8 +28,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Mcp.ImageOptimizer.Azure.Tools\Mcp.ImageOptimizer.Azure.Tools.csproj" />
     <ProjectReference Include="..\..\src\Mcp.ImageOptimizer.Common\Mcp.ImageOptimizer.Common.csproj" />
+    <ProjectReference Include="..\..\src\Mcp.ImageOptimizer.Stdio\Mcp.ImageOptimizer.Stdio.csproj" />
     <ProjectReference Include="..\..\src\Mcp.ImageOptimizer.StreamingHttp\Mcp.ImageOptimizer.StreamingHttp.csproj" />
-    <ProjectReference Include="..\..\src\Mcp.ImageOptimizer.Tools\Mcp.ImageOptimizer.Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
