--- a/src/Mcp.ImageOptimizer.Stdio/Mcp.ImageOptimizer.Stdio.csproj
+++ b/src/Mcp.ImageOptimizer.Stdio/Mcp.ImageOptimizer.Stdio.csproj
@@ -6,12 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting"/>
-    <PackageReference Include="ModelContextProtocol"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="ModelContextProtocol" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mcp.ImageOptimizer.Tools\Mcp.ImageOptimizer.Tools.csproj" />
+    <ProjectReference Include="..\Mcp.ImageOptimizer.Common\Mcp.ImageOptimizer.Common.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="Mcp.ImageOptimizer.Tools.Tests" />
+	</ItemGroup>
 </Project>
